@@ -17,12 +17,12 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>47</version>
+        <version>51</version>
     </parent>
 
     <groupId>org.jberet</groupId>
     <artifactId>jberet-parent</artifactId>
-    <version>3.1.1-SNAPSHOT</version>
+    <version>3.2.0-SNAPSHOT</version>
 
     <name>jberet-parent</name>
     <description>Implementation of Jakarta Batch</description>
@@ -38,7 +38,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.org.jberet.support>3.0.0.Final</version.org.jberet.support>
         <version.org.jboss.apiviz>1.3.2.GA</version.org.jboss.apiviz>
         <version.com.fasterxml.aalto-xml>1.3.3</version.com.fasterxml.aalto-xml>
@@ -47,7 +46,6 @@
         <version.jakarta.enterprise.cdi-api>4.1.0</version.jakarta.enterprise.cdi-api>
         <version.jakarta.inject-api>2.0.1.MR</version.jakarta.inject-api>
         <junit-jupiter.version>5.11.4</junit-jupiter.version>
-        <version.rest-assured>5.5.0</version.rest-assured>
         <version.org.codehaus.woodstox.stax2-api>4.2.2</version.org.codehaus.woodstox.stax2-api>
         <version.org.hibernate>6.0.2.Final</version.org.hibernate>
         <version.org.jboss.logging.jboss-logging>3.6.1.Final</version.org.jboss.logging.jboss-logging>
@@ -63,8 +61,8 @@
         <version.com.fasterxml.jackson>2.18.3</version.com.fasterxml.jackson>
         <version.org.mongodb.mongo-java-driver>3.12.14</version.org.mongodb.mongo-java-driver>
 
-        <version.org.infinispan>14.0.25.Final</version.org.infinispan>
-        <version.org.jgroups>5.4.1.Final</version.org.jgroups>
+        <version.org.infinispan>15.2.6.Final</version.org.infinispan>
+        <version.org.jgroups>5.4.11.Final</version.org.jgroups>
         <version.org.apache.poi>4.1.2</version.org.apache.poi>
         <version.commons-codec>1.17.1</version.commons-codec>
         <version.commons-exec>1.3</version.commons-exec>
@@ -72,7 +70,7 @@
         <version.org.apache.xmlbeans>5.3.0</version.org.apache.xmlbeans>
 
         <version.org.openjdk.nashorn>15.6</version.org.openjdk.nashorn>
-        <version.org.apache.groovy>4.0.24</version.org.apache.groovy>
+        <version.org.apache.groovy>5.0.2</version.org.apache.groovy>
         <version.org.jruby.jruby>9.0.0.0</version.org.jruby.jruby>
         <version.org.python.jython>2.7.4</version.org.python.jython>
         <version.org.scala-lang.scala-dist>2.13.14</version.org.scala-lang.scala-dist>
@@ -103,8 +101,13 @@
 
         <version.com.datastax.cassandra>3.11.5</version.com.datastax.cassandra>
         <version.org.wildfly.plugins.wildfly-maven-plugin>5.1.1.Final</version.org.wildfly.plugins.wildfly-maven-plugin>
-<!--        <server.test.feature.pack.artifactId>wildfly-ee-galleon-pack</server.test.feature.pack.artifactId>-->
+
+        <server.test.feature.pack.groupId>org.wildfly</server.test.feature.pack.groupId>
+        <!-- WildFly Preview is currently targeting Jakarta EE 11 and we should use it by default
+        <server.test.feature.pack.artifactId>wildfly-ee-galleon-pack</server.test.feature.pack.artifactId> -->
         <server.test.feature.pack.artifactId>wildfly-preview-feature-pack</server.test.feature.pack.artifactId>
+        <wildfly.channel.manifest.groupId>org.wildfly.channels</wildfly.channel.manifest.groupId>
+        <wildfly.channel.manifest.artifactId>wildfly-preview</wildfly.channel.manifest.artifactId>
         <!-- Other properties -->
         <!-- Protocol to use for communication with remote maven repositories.
              You can set to 'http' if you are using a maven proxy and 'https'
@@ -117,23 +120,12 @@
         <redirectTestOutput>false</redirectTestOutput>
         <javadoc.additional.params>-sourceclasspath ${project.build.outputDirectory}</javadoc.additional.params>
 
-        <modular.jdk.args>
-            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
-            --add-opens=java.base/java.io=ALL-UNNAMED
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-            --add-opens=java.base/java.security=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-            --add-opens=java.management/javax.management=ALL-UNNAMED
-            --add-opens=java.naming/javax.naming=ALL-UNNAMED
-        </modular.jdk.args>
+        <modular.jdk.args/>
 
         <surefire.system.args>${modular.jdk.args}</surefire.system.args>
 
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <!-- Require Java 17 -->
+        <maven.compiler.release>17</maven.compiler.release>
         <insecure.repositories>WARN</insecure.repositories>
     </properties>
 
@@ -267,6 +259,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging-processor</artifactId>
+                            <version>${version.org.jboss.logging.jboss-logging-tools}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${version.org.mapstruct}</version>
+                        </path>
+                    </annotationProcessorPaths>
                     <!-- Only generate skeleton properties for INFO or higher -->
                     <compilerArgument>-Aorg.jboss.logging.tools.level=INFO</compilerArgument>
                 </configuration>
@@ -352,7 +356,7 @@
             </dependency>
             <dependency>
                 <groupId>org.jboss.logging</groupId>
-                <artifactId>jboss-logging-processor</artifactId>
+                <artifactId>jboss-logging-annotations</artifactId>
                 <version>${version.org.jboss.logging.jboss-logging-tools}</version>
                 <!-- Only needed during build time for the annotation processor -->
                 <scope>provided</scope>
@@ -418,12 +422,6 @@
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
-                <version>${version.org.mapstruct}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-processor</artifactId>
                 <version>${version.org.mapstruct}</version>
                 <scope>provided</scope>
             </dependency>
@@ -828,12 +826,6 @@
                 <version>${junit-jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>io.rest-assured</groupId>
-                <artifactId>rest-assured</artifactId>
-                <version>${version.rest-assured}</version>
-                <scope>test</scope>
-            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -853,7 +845,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging-processor</artifactId>
+            <artifactId>jboss-logging-annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
